<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nohe</string>
    <string name="login_btn">Přihlásit se</string>
    <string name="login_error">Zadejte přihlašovací jméno a heslo.</string>
    <string name="logout_btn">Odhlásit se</string>
    <string name="edit_shipment_btn">Upravit</string>
    <string name="auth_error">Došlo k chybě při autorizaci. Zkuste se prosím se přihlásit znovu.</string>
    <string name="add_shipment_error">Musíte zadat všechny údaje</string>
    <string name="no_driver_error">Přihlásit se můžete pouze jako řidič.</string>
    <string name="location_permissions_fail">Musíte povolit přístup k poloze vašeho zařízení.</string>
    <string name="username_tb">Přihlašovací jméno</string>
    <string name="password_tb">Heslo</string>
    <string name="loading">Načítání</string>
    <string name="id_shipment">Číslo zásilky</string>
    <string name="code_tb">Kód</string>
    <string name="start_shipment_btn">Začít jízdu</string>
    <string name="sync_shipment_btn">SYNC</string>
    <string name="add_user_shipment_btn">Přidat jízdu</string>
    <string name="start_shipment_error">Musíte zadat číslo zásilky a kód.</string>
    <string name="start_shipment">Vyzvednutí zásilky</string>
    <string name="finish_shipment_btn">Ukončit jízdu</string>
    <string name="add_shipment_btn">Uložit</string>
    <string name="finish_shipment_error">Musíte zadat kód.</string>
    <string name="finish_shipment">Probíhající jízda</string>
    <string name="add_shipment">Vytvořená jízda</string>
    <string name="shipment_list">Jízdy</string>
    <string name="shipment_list_finish">Ukončené jízdy</string>
    <string name="shipment_list_in_progress">Probíhající jízdy</string>
    <string name="shipment_list_new">Nové jízdy</string>
    <string name="shipment_list_menu">Jízdy</string>
    <string name="take_photo_btn">Pořídit fotografii</string>
    <string name="delete_shipment_btn">Smazat</string>
    <string name="back_from_new_shipment_btn">Zpět</string>
    <string name="delete_dialog_title">Smazat jízdu</string>
    <string name="delete_dialog_text">Opravdu chcete smazat jízdu?</string>
    <string name="note">Poznámka: </string>
    <string name="price">Cena: </string>
    <string name="start">Start</string>
    <string name="finish">Cíl</string>
    <string name="help">Nápověda</string>
    <string name="info">O aplikaci</string>
    <string name="no_shipments">Žádné probíhající jízdy</string>
    <string name="insert_shipment_error">Jízda s tímto číslem již existuje</string>
    <string name="about1">Verze: 2.1.7</string>
    <string name="about2">Copyright © 2018 Nohe</string>
    <string name="about3">Tato aplikace slouží jako doplněk pro webový systém nohe.cz</string>
    <string name="about4">Kontakt: info@nohe.cz</string>
    <string name="help5">Synchronizace zásilek</string>
    <string name="help6">Pro získání jízd ze systému, je nutná synchronizace zásilek. Tato synchronizace zajistí, že jízdy, které má řidič přiřazené na sobě, se objeví v seznamu jízd této aplikace. Zároveň tato synchronizace odešle již ukončené jízdy i s fotkami. Pro neukončené jízdy (již probíhající) se synchronizace netýká.</string>
    <string name="help7">Ukončení jízdy</string>
    <string name="help8">Pro ukončení jízdy je nutné, jízdu odstartovat vyfocením zásilky při vyzvednutí a poté ukončit vyfocením zásilky při doručení.</string>
    <!-- Error codes -->
    <string name="server_error_fatal">Neznámá chyba serveru.</string>
    <string name="server_error_0">Neznámá chyba serveru, kontaktujte administratora</string>
    <string name="server_error_7">Nesprávné heslo</string>
    <string name="server_error_8">Uživatel nebyl nalezen</string>
    <string name="server_error_11">Tato jízda náleží jinému dopravci</string>
    <string name="server_error_12">Tato jízda již skončila</string>
    <string name="server_error_13">Je potřeba minimálně jedna fotografie</string>
    <string name="server_error_14">Tato jízda již probíhá</string>
    <string name="server_error_15">Můžete ukončit pouze novou jizdu která není ukončená</string>
    <string name="server_error_22">Vaše přihlášení vypršelo.</string>
    <string name="server_error_24">Nesprávné heslo</string>
    <string name="server_error_30">Tato jízda neexistuje</string>
    <string name="server_error_31">Tomuto řidiči není přidělena žádná jízda</string>
    <string name="server_error_32">Chyba připojení k internetu</string>
    <string name="server_error_35">Tato jízda není přiřazená na tohoto řiriče</string>
    <string name="server_error_37">Váš účet je zablokován na 5 minut</string>
    <string name="server_error_38">Nahrávaný obrázek musí být ve formátu .jpg nebo .png</string>
    <string name="server_error_39">Velikost nahrávaného obrázku nesmí být větší jak 1mb.</string>
    <string name="server_error_43">Uživatel není aktivován.</string>
</resources>