<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/about1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/about4"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:textSize="18sp"
        android:text="@string/about3"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/about2"/>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:layout_marginTop="5dp"
        />

</LinearLayout>