<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/opener_menu_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/menu_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/add_shipment"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="70dp"
            android:paddingBottom="50dp">

            <requestFocus />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="36dp"
                        android:paddingRight="36dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/id_shipment"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                        <EditText
                            android:id="@+id/id_shipment_tb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/id_shipment"
                            android:inputType="number"
                            android:padding="18dp"
                            android:singleLine="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/start_address_tb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/start"
                            android:inputType="text"
                            android:padding="18dp"
                            android:singleLine="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/finish"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                        <EditText
                            android:id="@+id/finish_address_tb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/finish"
                            android:inputType="text"
                            android:padding="18dp"
                            android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>

        </ScrollView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <Button
                android:id="@+id/save_shipment_btn"
                android:layout_width="50dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorAccent"
                android:drawableStart="@drawable/save_icon"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/add_shipment_btn"
                android:textAlignment="gravity"
                android:textColor="@drawable/button_text" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <Button
                android:id="@+id/delete_shipment_btn"
                android:layout_width="50dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorAccent"
                android:drawableStart="@drawable/delete_icon"
                android:gravity="center"
                android:padding="12dp"
                android:textAlignment="gravity"
                android:text="@string/delete_shipment_btn"
                android:textColor="@drawable/button_text" />

        </LinearLayout>
    </RelativeLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@layout/menu" />

</android.support.v4.widget.DrawerLayout>