<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="12dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="50dp">
            <requestFocus />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_shipment"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginBottom="20dp"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp">


                    <EditText
                        android:id="@+id/id_shipment_tb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/id_shipment"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/code_tb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/code_tb"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/take_photo_btn"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:layout_marginBottom="24dp"
                        android:padding="12dp"
                        android:text="@string/take_photo_btn"
                        android:textAlignment="gravity"
                        android:gravity="center" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/grey2"
                            app:layout_constraintDimensionRatio="H,16:9"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                                android:id="@+id/photo_show_pager"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:background="@drawable/images"
                                android:backgroundTint="@color/grey1"
                                />
                        </FrameLayout>

                    </android.support.constraint.ConstraintLayout>

                    <Button
                        android:id="@+id/btnRemovePhoto"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="6dp"
                        android:gravity="center"
                        android:background="@drawable/cancel_circle"
                        android:backgroundTint="@android:color/holo_red_dark"
                        android:textAlignment="gravity"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/start_shipment_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="12dp"
            android:background="@color/colorAccent"
            android:textColor="@drawable/button_text"
            android:text="@string/start_shipment_btn"
            android:textAlignment="gravity" />
    </RelativeLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@layout/menu" />

</android.support.v4.widget.DrawerLayout>