<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <requestFocus />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <EditText
                    android:id="@+id/code_tb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/code_tb"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/finish_shipment_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/finish_shipment_btn"
                    android:textAlignment="gravity"
                    android:gravity="center" />

                <Button
                    android:id="@+id/take_photo_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/take_photo_btn"
                    android:textAlignment="gravity"
                    android:gravity="center" />

                <Button
                    android:id="@+id/btnRemovePhoto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/remove_photo_btn"
                    android:textAlignment="gravity"
                    android:gravity="center" />
            </LinearLayout>


            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/photo_show_pager"
                android:layout_height="240dp"
                android:layout_width="match_parent"
                />
        </LinearLayout>
    </ScrollView>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@layout/menu" />

</android.support.v4.widget.DrawerLayout>