<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/opener_menu_btn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/menu_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/shipment_list"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="70dp"
            android:paddingTop="60dp">
            <requestFocus />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- NEW SHIPMENTS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/shipment_list_new"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp" />
                    <TextView
                        android:id="@+id/new_shipments_count_tw"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textSize="20sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/rv_shipment_new">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>
                <!-- SHIPMENTS IN PROGRESS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/shipment_list_in_progress"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp" />
                    <TextView
                        android:id="@+id/in_progress_shipments_count_tw"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textSize="20sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/rv_shipment_in_progress">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>
                <!-- FINISHED SHIPMENTS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/shipment_list_finish"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp" />
                    <TextView
                        android:id="@+id/finish_shipments_count_tw"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textSize="20sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/rv_shipment_finish">
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <Button
                android:id="@+id/finish_shipments"
                android:layout_width="50dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sync_shipment_btn"
                android:drawableStart="@drawable/sync_icon"
                android:textAlignment="gravity"
                android:textColor="@drawable/button_text" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <Button
                android:id="@+id/add_shipment"
                android:layout_width="50dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/add_user_shipment_btn"
                android:drawableStart="@drawable/add_icon"
                android:textAlignment="gravity"
                android:textColor="@drawable/button_text" />
        </LinearLayout>

    </RelativeLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@layout/menu" />

</android.support.v4.widget.DrawerLayout>